--- a/vendas.html
+++ b/vendas.html
@@ -267,5 +267,7 @@
         </div>
       </div>
     </div>
+    <script src="app.js"></script>
+    <script src="vendas.js"></script>
   </body>
 </html>
