--- a/relatorios.html
+++ b/relatorios.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relatórios - Fábrica de Picolés</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- CORREÇÃO: Usar versão correta do Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
   </head>
   <body class="page-app">
     <header class="topbar">
       <div class="topbar-content">
-        <h1 class="topbar-title">🍦 Fábrica de Picolés</h1>
+        <h1 class="topbar-title">🦴 Fábrica de Picolés</h1>
         <div class="topbar-actions">
           <span class="user-info" id="user-name">Usuário</span>
           <a href="index.html" class="btn btn-logout">Sair</a>
@@ -244,5 +245,6 @@
       </main>
     </div>
     <script src="app.js"></script>
+    <script src="relatorios.js"></script>
   </body>
 </html>
